Predictions now take a resolution param

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,7 @@ export(get_Gamma)
 export(get_Xi)
 export(load_data)
 export(plot_trajectory)
-export(predict_span)
+export(predict_trajectory)
 import(dplyr)
 import(driver)
 import(fido)
