--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(fit_DLM)
 export(fit_GP)
 export(get_Gamma)
 export(get_Xi)
+export(get_tax_label)
 export(load_data)
 export(plot_trajectory)
 export(predict_trajectory)
