--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,10 @@ export(get_Gamma)
 export(get_Xi)
 export(get_tax_label)
 export(load_data)
+export(plot_aligned_trajectories)
 export(plot_trajectory)
 export(predict_trajectory)
+export(summarize_Sigmas)
 import(dplyr)
 import(driver)
 import(fido)
