Began collecting sensitivity analyses into separate script

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,10 +10,12 @@ export(get_Xi)
 export(get_tax_label)
 export(load_data)
 export(plot_aligned_trajectories)
+export(plot_clr_vs_diet)
 export(plot_kernel_or_cov_matrix)
 export(plot_rug)
 export(plot_trajectory)
 export(predict_trajectory)
+export(sensitivity_sweep)
 export(summarize_Sigmas)
 import(dplyr)
 import(driver)
