Removed DLM, updated output directory structure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,13 @@
 export(calc_se_decay)
 export(check_dir)
 export(filter_data)
-export(fit_DLM)
 export(fit_GP)
 export(get_Gamma)
 export(get_Xi)
 export(get_tax_label)
 export(load_data)
+export(load_fit)
+export(load_predictions)
 export(plot_aligned_trajectories)
 export(plot_clr_vs_diet)
 export(plot_kernel_or_cov_matrix)
