Added downsampling simulations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(calc_se_decay)
 export(check_dir)
+export(downsample_counts)
 export(filter_data)
 export(fit_GP)
 export(get_Gamma)
@@ -22,6 +23,7 @@ import(dplyr)
 import(driver)
 import(fido)
 import(ggplot2)
+import(matrixsampling)
 import(phyloseq)
 import(tidyr)
 importFrom(phyloseq,psmelt)
