--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(load_fit)
 export(load_predictions)
 export(plot_aligned_trajectories)
 export(plot_clr_vs_diet)
+export(plot_downsampling)
 export(plot_kernel_or_cov_matrix)
 export(plot_rug)
 export(plot_trajectory)
