--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(check_dir)
 export(downsample_counts)
 export(filter_data)
 export(fit_GP)
+export(generate_scrambled_data)
 export(get_Gamma)
 export(get_Xi)
 export(get_tax_label)
