Added Adam optimization option

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,14 @@ export(check_dir)
 export(downsample_counts)
 export(filter_data)
 export(fit_GP)
+export(generate_scrambled_data)
 export(get_Gamma)
 export(get_Xi)
 export(get_tax_label)
 export(load_data)
 export(load_fit)
 export(load_predictions)
+export(load_scrambled_data)
 export(plot_aligned_trajectories)
 export(plot_clr_vs_diet)
 export(plot_downsampling)
