--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(load_predictions)
 export(load_scrambled_data)
 export(plot_aligned_trajectories)
 export(plot_clr_vs_diet)
+export(plot_correlation_histogram)
 export(plot_downsampling)
 export(plot_kernel_or_cov_matrix)
 export(plot_rug)
