Added methods to cluster/order rug heatmap rows and columns by various factors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,17 @@ export(fit_GP)
 export(generate_scrambled_data)
 export(get_Gamma)
 export(get_Xi)
+export(get_host_social_groups)
 export(get_reference_hosts)
 export(get_tax_label)
 export(load_data)
 export(load_fit)
 export(load_predictions)
 export(load_scrambled_data)
+export(order_rug_cols_mean_abundance)
+export(order_rug_row_baseline)
+export(order_rug_row_diversity)
+export(order_rug_row_group)
 export(plot_aligned_trajectories)
 export(plot_clr_vs_diet)
 export(plot_correlation_histogram)
@@ -33,6 +38,7 @@ import(ggplot2)
 import(matrixsampling)
 import(phyloseq)
 import(tidyr)
+import(vegan)
 importFrom(phyloseq,psmelt)
 importFrom(phyloseq,sample_data)
 importFrom(tidyr,pivot_longer)
