Added EDA plots: PCA and beginnings of series plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(check_dir)
 export(downsample_counts)
 export(filter_data)
 export(fit_GP)
+export(generate_highcontrast_palette)
+export(generate_palette)
 export(generate_scrambled_data)
 export(get_Gamma)
 export(get_Xi)
@@ -31,6 +33,7 @@ export(plot_trajectory)
 export(predict_trajectory)
 export(sensitivity_sweep)
 export(summarize_Sigmas)
+import(RColorBrewer)
 import(dplyr)
 import(driver)
 import(fido)
