First pass synchrony plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,11 @@ export(generate_scrambled_data)
 export(get_Gamma)
 export(get_Xi)
 export(get_host_social_groups)
+export(get_paired_trajectories)
+export(get_predictions_host_list)
 export(get_reference_hosts)
 export(get_tax_label)
+export(get_trajectory_df)
 export(load_data)
 export(load_fit)
 export(load_predictions)
