Finalized sychrony plots and additional EDA

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(order_rug_cols_mean_abundance)
 export(order_rug_row_baseline)
 export(order_rug_row_diversity)
 export(order_rug_row_group)
+export(order_rug_row_pedigree)
 export(plot_aligned_trajectories)
 export(plot_clr_vs_diet)
 export(plot_correlation_histogram)
@@ -36,12 +37,15 @@ export(plot_trajectory)
 export(predict_trajectory)
 export(sensitivity_sweep)
 export(summarize_Sigmas)
+import(Biostrings)
+import(DECIPHER)
 import(RColorBrewer)
 import(dplyr)
 import(driver)
 import(fido)
 import(ggplot2)
 import(matrixsampling)
+import(phangorn)
 import(phyloseq)
 import(tidyr)
 import(vegan)
