Rewrite of rug script; partial organization of other figures scripts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(load_data)
 export(load_fit)
 export(load_predictions)
 export(load_scrambled_data)
+export(order_rug_col_phylogenetic)
 export(order_rug_cols_mean_abundance)
 export(order_rug_row_baseline)
 export(order_rug_row_diversity)
@@ -41,10 +42,13 @@ export(summarize_Sigmas)
 import(Biostrings)
 import(DECIPHER)
 import(RColorBrewer)
+import(cowplot)
 import(dplyr)
 import(driver)
 import(fido)
+import(ggdendro)
 import(ggplot2)
+import(grid)
 import(matrixsampling)
 import(phangorn)
 import(phyloseq)
