--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(generate_scrambled_data)
 export(get_Gamma)
 export(get_Xi)
 export(get_host_social_groups)
+export(get_mean_clr_abundance)
 export(get_paired_trajectories)
 export(get_predictions_host_list)
 export(get_reference_hosts)
@@ -28,6 +29,7 @@ export(order_rug_row_baseline)
 export(order_rug_row_diversity)
 export(order_rug_row_group)
 export(order_rug_row_pedigree)
+export(percent_to_k)
 export(plot_aligned_trajectories)
 export(plot_clr_vs_diet)
 export(plot_correlation_histogram)
@@ -37,7 +39,7 @@ export(plot_rug)
 export(plot_trajectories_top_pairs)
 export(plot_trajectory)
 export(predict_trajectory)
-export(sensitivity_sweep)
+export(rug_phylogenetic_distances)
 export(summarize_Sigmas)
 import(Biostrings)
 import(DECIPHER)
