Between-within distribution generation added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(calc_consensus_sign)
 export(calc_se_decay)
 export(calc_universality_score)
+export(calc_universality_score_taxon)
 export(check_dir)
 export(downsample_counts)
 export(filter_data)
@@ -38,7 +39,9 @@ export(plot_kernel_or_cov_matrix)
 export(plot_rug)
 export(plot_trajectories_top_pairs)
 export(plot_trajectory)
+export(predict_GP_mean)
 export(predict_trajectory)
+export(pull_series)
 export(rug_phylogenetic_distances)
 export(summarize_Sigmas)
 import(Biostrings)
