Improved hockeystick figure; broke up series interpolation and synchrony plotting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(calc_se_decay)
 export(calc_universality_score)
 export(calc_universality_score_taxon)
 export(check_dir)
+export(convert_alr_Sigma_clr)
 export(downsample_counts)
 export(filter_data)
 export(fit_GP)
@@ -44,6 +45,7 @@ export(predict_GP_mean)
 export(predict_trajectory)
 export(pull_series)
 export(rug_phylogenetic_distances)
+export(simulate_series)
 export(summarize_Sigmas)
 import(Biostrings)
 import(DECIPHER)
