Updates to scatter and variance explained analyses

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,12 +7,16 @@ export(calc_universality_score)
 export(calc_universality_score_taxon)
 export(check_dir)
 export(convert_alr_Sigma_clr)
+export(convert_series_clr)
 export(downsample_counts)
 export(filter_data)
 export(fit_GP)
+export(generate_env_link)
 export(generate_highcontrast_palette)
+export(generate_innate_params)
 export(generate_palette)
 export(generate_scrambled_data)
+export(generate_series)
 export(get_Gamma)
 export(get_Xi)
 export(get_host_social_groups)
@@ -37,6 +41,9 @@ export(plot_aligned_trajectories)
 export(plot_clr_vs_diet)
 export(plot_correlation_histogram)
 export(plot_downsampling)
+export(plot_gLV_bars)
+export(plot_gLV_heatmap)
+export(plot_gLV_lines)
 export(plot_kernel_or_cov_matrix)
 export(plot_rug)
 export(plot_trajectories_top_pairs)
@@ -45,10 +52,12 @@ export(predict_GP_mean)
 export(predict_trajectory)
 export(pull_series)
 export(rug_phylogenetic_distances)
+export(simulate_scenario)
 export(simulate_series)
 export(summarize_Sigmas)
 import(Biostrings)
 import(DECIPHER)
+import(LaplacesDemon)
 import(RColorBrewer)
 import(cowplot)
 import(dplyr)
