--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(plot_aligned_trajectories)
 export(plot_clr_vs_diet)
 export(plot_correlation_histogram)
 export(plot_downsampling)
+export(plot_enrichment)
 export(plot_gLV_bars)
 export(plot_gLV_heatmap)
 export(plot_gLV_lines)
