--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(filter_data)
 export(fit_GP)
 export(generate_env_link)
 export(generate_highcontrast_palette)
+export(generate_highcontrast_palette2)
 export(generate_innate_params)
 export(generate_palette)
 export(generate_scrambled_data)
@@ -59,6 +60,7 @@ export(summarize_Sigmas)
 import(Biostrings)
 import(DECIPHER)
 import(LaplacesDemon)
+import(Polychrome)
 import(RColorBrewer)
 import(cowplot)
 import(dplyr)
