--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(predict_GP_mean)
 export(predict_trajectory)
 export(pull_series)
 export(rug_phylogenetic_distances)
+export(sequence_distance)
 export(simulate_scenario)
 export(simulate_series)
 export(summarize_Sigmas)
@@ -62,6 +63,7 @@ import(DECIPHER)
 import(LaplacesDemon)
 import(Polychrome)
 import(RColorBrewer)
+import(ape)
 import(cowplot)
 import(dplyr)
 import(driver)
@@ -72,6 +74,7 @@ import(grid)
 import(matrixsampling)
 import(phangorn)
 import(phyloseq)
+import(stringr)
 import(tidyr)
 import(vegan)
 importFrom(phyloseq,psmelt)
