HARDAC changes with model re-runs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(plot_trajectories_top_pairs)
 export(plot_trajectory)
 export(predict_GP_mean)
 export(predict_trajectory)
+export(prune_data)
 export(pull_series)
 export(rug_phylogenetic_distances)
 export(sequence_distance)
@@ -71,6 +72,7 @@ import(fido)
 import(ggdendro)
 import(ggplot2)
 import(grid)
+import(magrittr)
 import(matrixsampling)
 import(phangorn)
 import(phyloseq)
@@ -79,5 +81,6 @@ import(tidyr)
 import(vegan)
 importFrom(phyloseq,psmelt)
 importFrom(phyloseq,sample_data)
+importFrom(stringr,str_split)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
