Figure script updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(plot_trajectory)
 export(predict_GP_mean)
 export(predict_trajectory)
 export(prune_data)
+export(pull_Sigmas)
 export(pull_series)
 export(rug_phylogenetic_distances)
 export(sequence_distance)
