Revision draft incl. age analyses

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(convert_alr_Sigma_clr)
 export(convert_series_clr)
 export(downsample_counts)
 export(filter_data)
+export(filter_joint_zeros)
 export(fit_GP)
 export(generate_env_link)
 export(generate_highcontrast_palette)
