Revision-associated figure updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,8 @@ export(predict_trajectory)
 export(prune_data)
 export(pull_Sigmas)
 export(pull_series)
+export(renumber_taxon)
+export(represented_taxa)
 export(rug_phylogenetic_distances)
 export(sequence_distance)
 export(simulate_scenario)
